# minicalc

./: .gitignore  Makefile.in  configure  configure.ac
include/: config.h.in  parser.h  vars.h
src/: lexer.lex  main.c  parser.yy  vars.c
